--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -7,21 +7,15 @@
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Join Today</legend>
       <table>
       {{form.as_table}}
       </table>
     </fieldset>
     <div class="form-group">
       <button href="" class="btn btn-outline-info" type="submit">
-        Sign Up
+        Create Account
       </button>
     </div>
   </form>
-  {% comment %} <div class="border-top pt-3">
-    <small class="text-muted">Already have an account?
-      <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-    </small>
-  </div> {% endcomment %}
 </div>
 {% endblock content %}
