--- a/main/templates/main/view_applications.html
+++ b/main/templates/main/view_applications.html
@@ -1,13 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% block content%}
-        <h2> Create Application</h2><br>
-        <form method = "POST">
-         {% csrf_token %} 
-        <table>
-            {{ form.as_table }}
-        </table>
-        <p><button type ="submit">Create</button></p>
-        </form>
+       
         <br><br>
         <table>
             <thead>
