Delete emloyee added

--- a/main/templates/main/edit_details.html
+++ b/main/templates/main/edit_details.html
@@ -36,7 +36,7 @@
     </fieldset>
     <div class="form-group">
       <button href="" class="btn btn-outline-info" type="submit">
-        Submit
+        Make changes
       </button>
     </div>
   </form>
