--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -26,10 +26,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-            </li>
+            
             {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
@@ -42,7 +43,7 @@
                 <a class="dropdown-item" href="{% url 'pending-application' %}">Pending Applications</a>
                 <a class="dropdown-item" href="{% url 'accepted-application' %}">Accepted Applications</a>
                 <a class="dropdown-item" href="{% url 'rejected-application' %}">Rejected Applications</a>
-                <a class="dropdown-item" href="{% url 'edit-details' %}">Edit personal details</a>
+                <a class="dropdown-item" href="{% url 'edit-details' %}">View personal details</a>
                 <div class="dropdown-divider"></div>
              
 
@@ -51,6 +52,7 @@
                 {% else %}
                 <a class="dropdown-item" href="{% url 'register' %}">Add Employee</a>
                 <a class="dropdown-item" href="{% url 'check-application' %}">Check Application</a>
+                <a class="dropdown-item" href="{% url 'view-employee' %}">List of employees</a>
                 <div class="dropdown-divider"></div>
               </div>
               {% endif %}
@@ -59,14 +61,6 @@
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
 
-            {% else %}
-
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'register' %}">Register</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
             {% endif %}
 
             
