changed images on the home page

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -61,7 +61,7 @@
     <div class="col-md-3">
       <a href="{% url 'create-application' %}">
         <div class="card">
-          <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+          <img class="card-img-top" src="{% static 'images/sendLeaveApplication.jpg' %}" alt="Image of an Umbrella">
           <div class="card-body">
             <h5 class="card-title ">
               Send leave application
@@ -77,7 +77,7 @@
       <div class="col-md-3">
         <a href="{% url 'pending-application' %}">
           <div class="card">
-            <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+            <img class="card-img-top" src="{% static 'images/pendingApplication.jpg' %}" alt="Pending Image">
             <div class="card-body">
               <h5 class="card-title ">
                 Pending Applications
@@ -92,7 +92,7 @@
         <div class="col-md-3">
           <a href="{% url 'accepted-application' %}">
             <div class="card">
-              <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+              <img class="card-img-top" src="{% static 'images/Accepted.jpg' %}" alt="A Green tick">
               <div class="card-body">
                 <h5 class="card-title ">
                   Accepted Applications
@@ -106,7 +106,7 @@
         <div class="col-md-3">
           <a href="{% url 'rejected-application' %}">
             <div class="card">
-              <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+              <img class="card-img-top" src="{% static 'images/Rejected.jpg' %}" alt="Rejected sign">
               <div class="card-body">
                 <h5 class="card-title ">
                   Rejected Applications
@@ -121,7 +121,7 @@
         <div class="col-md-3">
           <a href="{% url 'edit-details' %}">
             <div class="card">
-              <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+              <img class="card-img-top" src="{% static 'images/PersonalDetails.jpg' %}" alt="Image of a Diary">
               <div class="card-body">
                 <h5 class="card-title ">
                   View personal details
