--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -12,7 +12,7 @@
     <div class="col-md-3">
       <a href="{% url 'check-application' %}">
         <div class="card">
-          <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+          <img class="card-img-top" src="{% static 'images/check status.png' %}" alt="Check Status">
           <div class="card-body">
             <h5 class="card-title ">
               Check application
@@ -27,7 +27,7 @@
       <div class="col-md-3">
         <a href="{% url 'register' %}">
           <div class="card">
-            <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+            <img class="card-img-top" src="{% static 'images/Add employee.jpg' %}" alt="Add employee">
             <div class="card-body">
               <h5 class="card-title ">
                 Add employee
@@ -41,7 +41,7 @@
       <div class="col-md-3">
         <a href="{% url 'view-employee' %}">
           <div class="card">
-            <img class="card-img-top" src="{% static 'images/notes.jpg' %}" alt="Notes image">
+            <img class="card-img-top" src="{% static 'images/employee details.jpg' %}" alt="Employee Details">
             <div class="card-body">
               <h5 class="card-title ">
                 List of employees
