--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,7 +13,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-  <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 </head>
 
 <body>
@@ -50,7 +50,8 @@
 
                 
                 {% else %}
-                <a class="dropdown-item" href="{% url 'register' %}">Add Employee</a>
+                <a class="dropdown-item" href="{% url 'register-worker' %}">Add Employee</a>
+                <a class="dropdown-item" href="{% url 'register-admin' %}">Add Administrator</a>
                 <a class="dropdown-item" href="{% url 'check-application' %}">Check Application</a>
                 <a class="dropdown-item" href="{% url 'view-employee' %}">List of employees</a>
                 <div class="dropdown-divider"></div>
