--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ html {
 
 
 main {
-    font-family: Barlow, Quicksand, Rubik, sans-serif, serif, 'Times New Roman', Times, serif !important;
+    font-family: Barlow, Quicksand, Rubik, sans-serif, serif, 'Times New Roman', Times, serif ;
 }
 
 footer {
@@ -20,8 +20,8 @@ footer {
 }
 
 .navbar {
-    background-color: rgb(0, 0, 0) !important;
-    /* background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%) !important; */
+    background-color: rgb(0, 0, 0) ;
+    /* background: linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%) ; */
 }
 
 .card {
@@ -31,13 +31,13 @@ footer {
 
 
 .card-header:hover {
-    background: rgb(11, 22, 83) !important;
-    color: whitesmoke !important;
+    background: rgb(11, 22, 83) ;
+    color: whitesmoke ;
     transition: 0.1s ease-in;
 }
 
 a {
-    text-decoration: none !important;
+    text-decoration: none ;
     color: black;
 }
 
@@ -49,19 +49,19 @@ a:hover {
 
 
 .custom-header:hover {
-    background: rgb(143, 189, 186) !important;
+    background: rgb(143, 189, 186) ;
 }
 
 .card-header {
-    color: black !important;
-    background: rgb(152, 214, 230) !important;
+    color: black ;
+    background: rgb(152, 214, 230) ;
     transition: 0.3s ease-in;
 
 }
 
 .nav-link:hover {
-    background: black !important;
-    color: white !important;
+    background: black ;
+    color: white ;
     transition: 0.7s ease;
 }
 
@@ -198,8 +198,8 @@ footer .column a+a {
 } */
 
 .account-img {
-    height: 125px !important;
-    width: 125px !important;
+    height: 125px ;
+    width: 125px ;
     margin-right: 20px;
     margin-bottom: 16px;
 }
@@ -208,11 +208,12 @@ footer .column a+a {
     font-size: 2.5rem;
 }
 
-.col-md-3 a {
+.col-md-3 {
     /* text-decoration: none;    */
+    margin-bottom: 40px;
 }
 
 .row{
-    align-items: center;
-    padding: 10px;
+    /* align-items: center;
+    padding: 10px; */
 }
