--- a/main/templates/main/create_application.html
+++ b/main/templates/main/create_application.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base_employee.html' %}
 {% block content%}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -6,9 +6,37 @@
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Send Application</legend>
-            {{form|crispy}}
-        </fieldset>
+
+            <div class="input-group">
+              <div class="input-group mb-3">
+              <span class="input-group-text">Title</span>
+              <input type="text"  class="form-control" name = "title">
+            </div>
+          </div>
+            
+        
+          <div class="input-group">
+            <div class="input-group mb-3">
+            <span class="input-group-text">Description</span>
+            <textarea class="form-control" name = "description"></textarea>
+            </div>
+          </div>
+            
+            
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon3">Start Date</span>
+              <input type="date" class="form-control" name = "start_date">
+               &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp <h3>to</h3
+                > &nbsp &nbsp&nbsp &nbsp&nbsp &nbsp
+              <span class="input-group-text" id="basic-addon3">End Date</span>
+              <input type="date" class="form-control" name = "end_date">
+            </div>
+            
+            
+       
+            
+            
+          </fieldset>
         
         <div class="form-group">
             <button href="" class="btn btn-outline-info" type="submit">
