--- a/main/templates/main/register_worker.html
+++ b/main/templates/main/register_worker.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base_admin.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
