changed navbar burger menu

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -72,7 +72,7 @@
     <div class="col-md-3">
       <a href="{% url 'view-admin' %}">
         <div class="card">
-          <img class="card-img-top" src="{% static 'images/View Administrators.png' %}" alt="View Administrators">
+          <img class="card-img-top" src="{% static 'images/view admins.png' %}" alt="View admins">
           <div class="card-body">
             <h5 class="card-title ">
               View Administrators
@@ -87,7 +87,7 @@
     <div class="col-md-3">
       <a href="{% url 'view-record-admin' %}">
         <div class="card">
-          <img class="card-img-top" src="{% static 'images/View Administrators.png' %}" alt="View Administrators">
+          <img class="card-img-top" src="{% static 'images/View record of applications.png' %}" alt="View record of applications>
           <div class="card-body">
             <h5 class="card-title ">
               View record of applications
@@ -249,7 +249,7 @@
     <div class="col-md-3">
       <a href="{% url 'view-record' %}">
         <div class="card">
-          <img class="card-img-top" src="{% static 'images/View Administrators.png' %}" alt="View Administrators">
+          <img class="card-img-top" src="{% static 'images/View record of applications.png' %}" alt="View Administrators">
           <div class="card-body">
             <h5 class="card-title ">
               View record of applications
